--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,18 @@
+
 body {
   padding: 0;
   font: 35px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
-a {
-  color: #00B7FF;
+a:link {
+  color: rgb(203,223,237);
+}
+a:visited{
+  color: rgb(203,223,237);
+
+}
+.color{
+  background-color: rgb(31, 73, 125);
 }
 .hidden{
   display: none;
@@ -14,36 +22,78 @@ a {
 }
 
 #mainMenu{
-  position: relative;
-  left: -200px;
-  top: 50px;
+  z-index: 2;
+  position: absolute;
+  left: -300px;
+  color: rgb(203,223,237);
+  text-wrap: normal;
+  padding-right: 1%;
   width: 70%;
-  font-size: 30px;
+  height: 88%;
+  font-size: 20px;
+  overflow: auto;
+
 }
 
 #title{
- position: absolute;
-  left: 150px;
-  top:0;
+  position: absolute;
+  left: 70px;
+  top:3px;
+}
+#otherTitles{
+  margin-left: 8%;
 }
 #showMenu{
   position: absolute;
   top: 10px;
-  left: 50px;
+  left: 10px;
   width: 50px;
   height: 55px;
   padding: 0px;
 }
 .glyphicon{
-  font-size: 40px;
+  font-size: 25px;
   align-text: center;
   margin: 0;
 }
 
-#header{
+#header {
   background-color: rgb(31, 73, 125);
   width: 100%;
-  height: 80px;
+  height: 15%;
+}
+#header h1, #header button{
+  color: rgb(203,223,237);
 
 }
+#header button{
+  background-color: rgb(31, 73, 125);
+}
+#newsPanel {
+  margin-left: 1%;
+  margin-right: 3%;
+  width: 100%;
 
+
+
+}
+#myCarousel{
+  position: absolute;
+}
+#newsTitle{
+  margin-left: 2%;
+  margin-right: 3%;
+
+
+}
+#newsContent{
+  margin-left: 3%;
+  margin-right: 3%;
+
+}
+#newsAuthor{
+  margin-left: 3%;
+  margin-right: 3%;
+
+
+}
