--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,9 +1,15 @@
-<html manifest="app.cache">
+<html manifest="/manifest.appcache">
 <head>
     <title>wholesome title</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="stylesheets/style.css" rel="stylesheet" type="text/css">
+
+    <!-- bxSlider Javascript file -->
+    <script src="../js/jquery.bxslider.min.js"></script>
+    <!-- bxSlider CSS file -->
+    <link href="../lib/jquery.bxslider.css" rel="stylesheet" />
+
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -14,15 +20,15 @@
     <!-- Signin CSS -->
 
 </head>
-
-<div id="header">
-<button id="showMenu" type="button" class="btn btn-default" aria-label="Left Align">
-    <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
-</button>
-<h1 id="title">Welcome</h1>
-</div>
 <body>
-<div id="mainMenu" class="hidden">
+<div id="header">
+    <button id="showMenu" type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+    </button>
+    <img id="title" src="/HOMEbanner.png" height="13%" />
+</div>
+
+<div id="mainMenu" class="hidden color">
 
     <ul class="nav nav-stacked">
         <li><a href="#">Home</a></li>
@@ -35,20 +41,56 @@
     </ul>
 
 </div>
+<div id="outer-space">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img src="/1.jpg" alt="Chania">
+            </div>
+
+            <div class="item">
+                <img src="/2.jpg" alt="Chania">
+            </div>
+
+            <div class="item">
+                <img src="/3.jpg" alt="Flower">
+            </div>
+
+            <div class="item">
+                <img src="/4.jpg" alt="Flower">
+            </div>
+        </div>
+
+        <!-- Left and right controls -->
+        <a  class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+</div>
+
 </body>
 <script>
 
- $('#showMenu').click(function(){
-     if($('#mainMenu').hasClass('hidden')){
-         $('#mainMenu').removeClass('hidden').addClass('visible');
-         $('#mainMenu').animate({left: '0'}, 1000);
-     }else{
-         $('#mainMenu').animate({left: '-200px'}, 1000);
-         setTimeout( function(){
-             $('#mainMenu').removeClass('visible').addClass('hidden');
-         }, 1000);
-     }
- });
+    $('#showMenu').click(function(){
+        if($('#mainMenu').hasClass('hidden')){
+            $('#mainMenu').removeClass('hidden').addClass('visible');
+            $('#mainMenu').animate({left: '0'}, 1000);
+        }else{
+            $('#mainMenu').animate({left: '-300px'}, 1000);
+            setTimeout( function(){
+                $('#mainMenu').removeClass('visible').addClass('hidden');
+            }, 1000);
+        }
+    });
 
 </script>
 </html>
