--- a/views/notice.ejs
+++ b/views/notice.ejs
@@ -1,4 +1,4 @@
-<html>
+<html manifest="/manifest.appcache">
 <head>
     <title>Hey There</title>
 
@@ -15,14 +15,49 @@
 
 </head>
 <body>
-<h1>OI OI</h1>
+<div id="header">
+    <button id="showMenu" type="button" class="btn btn-default" aria-label="Left Align">
+        <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
+    </button>
+    <h1 id="title">News</h1>
+
+</div>
 
 
-        <%- include post %>
+<div id="mainMenu" class="hidden">
+
+    <ul class="nav nav-stacked">
+        <li><a href="/">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="notice">News</a></li>
+        <li><a href="index.ejs">Videos</a></li>
+        <li><a href="index.ejs">Training</a></li>
+        <li><a href="index.ejs">Go Live</a></li>
+        <li><a href="index.ejs">Contact/Feedback</a></li>
+    </ul>
+
+</div>
+
+<%- include post %>
 
 </body>
 
+<script>
 
+    $('#showMenu').click(function(){
+        if($('#mainMenu').hasClass('hidden')){
+            $('#mainMenu').removeClass('hidden').addClass('visible');
+            $('#mainMenu').addClass('color');
+            $('#mainMenu').animate({left: '0'}, 1000);
+        }else{
+            $('#mainMenu').animate({left: '-300px'}, 1000);
+            setTimeout( function(){
+                $('#mainMenu').removeClass('visible').addClass('hidden');
+            }, 1000);
+        }
+    });
+
+</script>
 
 
 </html>
