--- a/views/post.ejs
+++ b/views/post.ejs
@@ -3,8 +3,8 @@
 <% myArray.forEach(function(obj) { %>
 <div id="newsPanel">
     <h3 id="newsTitle"><%= obj.noticeTitle %></h3>
-    <p id="newsContent"><%= obj.noticeContent %></p>
-    <p id="newsAuthor"><i>- <%= obj.noticeAuthor %></i></p>
+    <p id="newsContentPara"><%= obj.noticeContent %></p>
+    <p id="newsAuthor"><i>Written by - <%= obj.noticeAuthor %></i></p>
 </div>
 <hr/>
 <% }); %>
