--- a/views/notice.ejs
+++ b/views/notice.ejs
@@ -28,12 +28,12 @@
 
     <ul class="nav nav-stacked">
         <li><a href="/">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="about">About</a></li>
         <li><a href="notice">News</a></li>
-        <li><a href="index.ejs">Videos</a></li>
-        <li><a href="index.ejs">Training</a></li>
+        <li><a href="video">Videos</a></li>
+        <li><a href="trainning">Training</a></li>
         <li><a href="index.ejs">Go Live</a></li>
-        <li><a href="index.ejs">Contact/Feedback</a></li>
+        <li><a href="contact">Contact/Feedback</a></li>
     </ul>
 
 </div>
