--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -1,6 +1,6 @@
 <html manifest="/manifest.appcache">
 <head>
-    <title>cunt slabs</title>
+    <title>Welcome</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link href="stylesheets/style.css" rel="stylesheet" type="text/css">
@@ -17,7 +17,7 @@
 <body>
 <div class="container">
     <form class='form-signin' action='' method='POST' enctype="multipart/form-data">
-        <h2 class='form-signin-heading'>Cuntent Management Shizzle</h2>
+        <h2 class='form-signin-heading'>Content Managment System</h2>
         <label class='sr-only'>Notice Title</label>
         <input type='text' name='noticeTitle' class='form-control' placeholder='Title' required autofocus>
         <label class='sr-only'>Notice Content</label>
