--- a/views/post.ejs
+++ b/views/post.ejs
@@ -1,6 +1,6 @@
 
 
-<% myArray.forEach(function(obj) { %>
+<% myNoticeArray.forEach(function(obj) { %>
 <div id="newsPanel">
     <h3 id="newsTitle"><%= obj.noticeTitle %></h3>
     <p id="newsContentPara"><%= obj.noticeContent %></p>
