--- a/views/video.ejs
+++ b/views/video.ejs
@@ -1,4 +1,4 @@
-<% myArray.forEach(function(obj) { %>
+<% myVidArray.forEach(function(obj) { %>
 <div id="newsPanel">
     <h3><%= obj.videoTitle %></h3>
     <video id="smallFrame" class="embed-responsive-item" controls>
