--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,7 +6,6 @@
     <link href="stylesheets/style.css" rel="stylesheet" type="text/css">
 
 
-
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -28,54 +27,56 @@
 <div id="mainMenu" class="hidden">
 
     <ul class="nav nav-stacked">
-        <li><a href="/">Home</a></li>
-        <li><a href="about">About</a></li>
-        <li><a href="notice">News</a></li>
-        <li><a href="video">Videos</a></li>
-        <li><a href="trainning">Training</a></li>
-        <li><a href="index.ejs">Go Live</a></li>
-        <li><a href="contact">Contact/Feedback</a></li>
+        <li><a href="/"><i class="glyphicon glyphicon-home"></i>Home</a></li>
+        <li><a href="about"><i class="glyphicon glyphicon-question-sign"></i>About</a></li>
+        <li><a href="notice"><i class="glyphicon glyphicon-book"></i>News</a></li>
+        <li><a href="video"><i class="glyphicon glyphicon-facetime-video"></i>Videos</a></li>
+        <li><a href="trainning"><i class="glyphicon glyphicon-book"></i>Training</a></li>
+        <li><a href="index.ejs"><i class="glyphicon glyphicon-glass"></i>Go Live</a></li>
+        <li><a href="contact"><i class="glyphicon glyphicon-comment"></i>Contact/Feedback</a></li>
     </ul>
 
 </div>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
+
         <!-- Indicators -->
 
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <img src="/images/1.jpg" alt="Qld Health">
-                <div class="carousel-caption">
-                    <h3>New Construction </h3>
-                    <h4 id="featureLinks"><a href="http://www.google.com.au"> See More</a></h4>
-                </div>
-            </div>
+            <%- include carosels %>
+            <!--<div class="item active">-->
+                <!--<img src="/images/1.jpg" alt="Qld Health">-->
+                <!--<div class="carousel-caption">-->
+                    <!--<h3>New Construction </h3>-->
+                    <!--<h4 id="featureLinks"><a href="http://www.google.com.au"> See More</a></h4>-->
+                <!--</div>-->
+            <!--</div>-->
 
-            <div class="item">
-                <img src="/images/2.jpg" alt="Chania">
-                <div class="carousel-caption">
-                    <h3>Welcome to Cairns </h3>
-                    <h4 id="featureLinks"><a href="http://www.google.com.au"> See More</a></h4>
-                </div>
-            </div>
+            <!--<div class="item">-->
+                <!--<img src="/images/2.jpg" alt="Chania">-->
+                <!--<div class="carousel-caption">-->
+                    <!--<h3>Welcome to Cairns </h3>-->
+                    <!--<h4 id="featureLinks"><a href="http://www.google.com.au"> See More</a></h4>-->
+                <!--</div>-->
+            <!--</div>-->
 
-            <div class="item">
-                <img src="/images/3.png" alt="Flower">
-                <div class="carousel-caption">
-                    <h3>General meeting </h3>
-                    <h4 id="featureLinks"><a href="http://www.google.com.au"> See More</a></h4>
-                </div>
+            <!--<div class="item">-->
+                <!--<img src="/images/3.png" alt="Flower">-->
+                <!--<div class="carousel-caption">-->
+                    <!--<h3>General meeting </h3>-->
+                    <!--<h4 id="featureLinks"><a href="http://www.google.com.au"> See More</a></h4>-->
+                <!--</div>-->
 
-            </div>
+            <!--</div>-->
 
-            <div class="item">
-                <img src="/images/4.jpg" alt="Flower">
-                <div class="carousel-caption">
+            <!--<div class="item">-->
+                <!--<img src="/images/4.jpg" alt="Flower">-->
+                <!--<div class="carousel-caption">-->
 
-                    <h3>Medication </h3>
-                    <h4 id="featureLinks"><a href="http://www.google.com.au"> See More</a></h4>
-                </div>
-            </div>
+                    <!--<h3>Medication </h3>-->
+                    <!--<h4 id="featureLinks"><a href="http://www.google.com.au"> See More</a></h4>-->
+                <!--</div>-->
+            <!--</div>-->
         </div>
 
         <!-- Left and right controls -->
@@ -89,11 +90,14 @@
         </a>
     </div>
 
+
+
+
 <hr style="color:black;" />
 <div id="homePageContainer">
-    <center><h3 id="homePageContainerTitle">
+    <h3 id="homePageContainerTitle">
             Quick Reference Guide
-        </h3></center>
+        </h3>
 </div>
 <button type="button" id="newsButton" class="btn btn-default" >Training Manuals
     <span id="directionIcons" class="glyphicon glyphicon-menu-right" aria-hidden="true" ></span>
@@ -127,6 +131,17 @@
             }, 1000);
         }
     });
+    var thing = document.getElementById('mainMenu');
+    $('.item').first().addClass('active');
+    console.log("fucnkked")
+
+    $("#smallFrame")[0].onplay = function(){
+        console.log("jehkjej")
+        $("#myCarousel").carousel('pause');
+    };
+    $("#smallFrame")[0].onpause = function() {
+        $('#myCarousel').carousel('cycle');
+    };
 
 </script>
 </html>
