page content system - basic

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -19,7 +19,7 @@
     <button id="showMenu" type="button" class="btn btn-default" aria-label="Left Align">
         <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
     </button>
-    <h1 id="title">About</h1>
+    <h1 id="title"><%= fucker.pageName %></h1>
 
 </div>
 
@@ -38,24 +38,25 @@
 </div>
 
 <div id="aboutUs">
-    <h3>About</h3>
-    <p>Researchers from the George Institute for Global Health in Sydney found sending simple texts such as "Don't
-        forget physical activity is good for you!" could motivate patients to improve their health.
-        <br/>
-        <br/>
-        After receiving four texts a week for six months, patients significantly lowered their cholesterol, blood
-        pressure and body mass index.
-        <br/>
-        <br/>
+    <h3><%- fucker.pageName %></h3>
+    <p><%- fucker.pageContent.block1 %></p>
+    <!--<p>Researchers from the George Institute for Global Health in Sydney found sending simple texts such as "Don't-->
+        <!--forget physical activity is good for you!" could motivate patients to improve their health.-->
+        <!--<br/>-->
+        <!--<br/>-->
+        <!--After receiving four texts a week for six months, patients significantly lowered their cholesterol, blood-->
+        <!--pressure and body mass index.-->
+        <!--<br/>-->
+        <!--<br/>-->
 
-        Associate Professor Clara Chow from the institute said the approach had the potential to prevent second heart
-        attacks and save thousands of lives.
-        <br/>
-        <br/>
-        "Around 55,000 Australians go to hospital with a heart attack every year and around one third of those are
-        repeat heart attacks," she said.
-    </p>
-
+        <!--Associate Professor Clara Chow from the institute said the approach had the potential to prevent second heart-->
+        <!--attacks and save thousands of lives.-->
+        <!--<br/>-->
+        <!--<br/>-->
+        <!--"Around 55,000 Australians go to hospital with a heart attack every year and around one third of those are-->
+        <!--repeat heart attacks," she said.-->
+    <!--</p>-->
+    <%- fucker.pageContent.block2 %>
     <a href="http://www.health.qld.gov.au" class="link">Click for more information</a>
     <p></p>
 
