--- a/views/trainning.ejs
+++ b/views/trainning.ejs
@@ -20,7 +20,7 @@
     <button id="showMenu" type="button" class="btn btn-default" aria-label="Left Align">
         <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
     </button>
-    <h1 id="title">Training</h1>
+    <h1 id="title"><%= data.pageName %></h1>
 
 </div>
 
@@ -38,6 +38,8 @@
     </ul>
 
 </div>
+<p><%= data.pageContent.block1 %></p>
+<p><%= data.pageContent.block2 %></p>
 <div id="homePageContainer">
     <center><h3 id="homePageContainerTitle">
             Training and Devices
