--- a/views/partials/carosels.ejs
+++ b/views/partials/carosels.ejs
@@ -1,6 +1,16 @@
+<script>
+    var vidCount = -1;
+    var vidCountArray = [];
+</script>
 <% myVidArray.forEach(function(obj) { %>
+    <script>
+
+        vidCount += 1;
+        vidCountArray.push(vidCount);
+        console.log("video count " + vidCount);
+    </script>
     <div class="item center">
-        <video id="smallFrame" class="embed-responsive-item" src="<%= obj.videoURL %>" type="video/mp4" controls>
+        <video class="smallFrame" class="embed-responsive-item" src="<%= obj.videoURL %>" type="video/mp4" controls>
             Somethings Wrong.
         </video>
         <div id="newsPanel" >
