--- a/views/partials/video.ejs
+++ b/views/partials/video.ejs
@@ -1,7 +1,7 @@
 <% myVidArray.forEach(function(obj) { %>
 <div id="newsPanel">
     <h3><%= obj.videoTitle %></h3>
-    <video id="smallFrame" class="embed-responsive-item" controls>
+    <video class="smallFrame" class="embed-responsive-item" controls>
         <source src="<%= obj.videoURL %>" type="video/mp4">
         <!--<source src="/vids/v.ogg" type="video/ogg">-->
         Somethings Wrong.
