--- a/views/about.ejs
+++ b/views/about.ejs
@@ -19,7 +19,7 @@
     <button id="showMenu" type="button" class="btn btn-default" aria-label="Left Align">
         <span class="glyphicon glyphicon-align-justify" aria-hidden="true"></span>
     </button>
-    <h1 id="title"><%= fucker.pageName %></h1>
+    <h1 id="title"><%- fucker.pageTitle %></h1>
 
 </div>
 
@@ -37,9 +37,14 @@
 
 </div>
 
-<div id="aboutUs">
-    <h3><%- fucker.pageName %></h3>
-    <p><%- fucker.pageContent.block1 %></p>
+
+    <div id="cunt">
+    <% Object.keys(fucker.pageContent).forEach(function(obj) { %>
+
+        <p><%- fucker.pageContent[obj] %></p>
+
+    <%});%>
+    </div>
     <!--<p>Researchers from the George Institute for Global Health in Sydney found sending simple texts such as "Don't-->
         <!--forget physical activity is good for you!" could motivate patients to improve their health.-->
         <!--<br/>-->
@@ -56,12 +61,11 @@
         <!--"Around 55,000 Australians go to hospital with a heart attack every year and around one third of those are-->
         <!--repeat heart attacks," she said.-->
     <!--</p>-->
-    <%- fucker.pageContent.block2 %>
-    <a href="http://www.health.qld.gov.au" class="link">Click for more information</a>
-    <p></p>
+
+
 
     <center><img src="/images/QLDHealth.jpg" id="AboutUsImg" alt="Qld Health" class="img-thumbnail"></center>
-</div>
+
 </body>
 
 <script>
