--- a/views/editPage.ejs
+++ b/views/editPage.ejs
@@ -1,28 +1,95 @@
-<html manifest="/manifest.appcache">
+<html>
 <head>
-    <title>fuckee</title>
+    <title>arrgg</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <link href="stylesheets/style.css" rel="stylesheet" type="text/css">
+    <link href="http://localhost:4004/stylesheets/style.css" rel="stylesheet" type="text/css">
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/ui/1.11.4/jquery-ui.js"></script>
 </head>
 <body>
-<form action="/updater" method="POST" class="formUpdater" enctype="multipart/form-data" id="updaterForm">
-    <fieldset>
-<h1><%= dat.pageName %></h1>
-<label for="pageName">NAME </label>
-<textarea name="pageName" id="pageName"><%= dat.pageName %></textarea>
-        <br/>
-<% for(var blockX in dat.pageContent) { %>
-        <label for="<%- blockX%>"><%- blockX%></label>
-        <textarea name="<%- blockX%>" id="<%- blockX%>"><%- dat.pageContent[blockX] %></textarea>
-    <br/>
-<% }; %>
-<button type="submit">Click</button>
-</fieldset>
-    </form>
-</body>
+<div id="controlBlock">
+    <button type="button" class="addBlock"> +</button>
+    <button type="button" class="removeBlock"> -</button>
+</div>
+<form id="blockForm" action="/updater" method="POST" class="formUpdater" enctype="multipart/form-data" id="updaterForm">
 
+
+    <h1><%= dat.pageName %></h1>
+    <label for="pageName">Name: </label>
+    <input type="hidden" name="pageName" value="<%= dat.pageName %>">
+    <textarea name="pageTitle" id="pageTitle"><%= dat.pageTitle %></textarea>
+    <br/>
+
+    <script>
+        var countee = 0;
+        console.log("jere");
+    </script>
+    <ul id="sortable">
+
+        <% for(var blockId in dat.pageContent){ %>
+        <% console.log("sss" + blockId) %>
+
+        <li class="editBlock">
+
+            <label for="<%- blockId %>"><%- blockId %></label>
+
+            <textarea class="draggable" name="<%- blockId %>"
+                      id="<%- blockId %>"><%- dat.pageContent[blockId] %></textarea>
+            <button type="button" class="moveUp glyphicon glyphicon-arrow-up" return="false"></button>
+        </li>
+
+        <% }; %>
+    </ul>
+    <button type="submit">Click</button>
+</form>
+
+</body>
+<script>
+    var len = $('ul li').length;
+    countee = len;
+
+    $('.addBlock').click(function () {
+
+            countee += 1;
+            console.log("ccc " + countee);
+            var former = document.getElementById("blockForm");
+            var blocker = document.createElement("textarea");
+            var li = document.createElement('li');
+            var blockName = "block" + (countee);
+            var labeler = document.createElement("label");
+            labeler.appendChild(document.createTextNode(blockName));
+            labeler.for = blockName;
+            blocker.name = blockName;
+            blocker.id = blockName;
+            li.appendChild(labeler);
+            li.appendChild(blocker);
+            $(li).addClass('editBlock');
+            $('ul').append(li);
+        });
+    $('.removeBlock').click(function () {
+           $('li:last').remove();
+        countee -= 1;
+    });
+    $('ul li').delegate('button','click', function(){
+        $('button').bind('input propertychange', function() {
+            $("button").hide();
+
+            if(this.value.length){
+                $("button").show();
+            }
+        });
+        var li = $(this).parent('li');
+        console.log(li.index());
+        var thisCunt = $('textarea')[li.index() + 1].textContent;
+        var thatCunt = $('textarea')[li.index()].textContent;
+        $('textarea')[li.index()].textContent = thisCunt;
+        $('textarea')[li.index()+ 1].textContent = thatCunt;
+    });
+
+
+
+</script>
 </html>
