--- a/views/about.ejs
+++ b/views/about.ejs
@@ -25,14 +25,15 @@
 
 
 <div id="mainMenu" class="hidden">
+
     <ul class="nav nav-stacked">
-        <li><a href="/">Home</a></li>
-        <li><a href="about">About</a></li>
-        <li><a href="notice">News</a></li>
-        <li><a href="video">Videos</a></li>
-        <li><a href="trainning">Training</a></li>
-        <li><a href="index.ejs">Go Live</a></li>
-        <li><a href="contact">Contact/Feedback</a></li>
+        <li><a href="/"><i class="glyphicon glyphicon-home"></i>Home</a></li>
+        <li><a href="about"><i class="glyphicon glyphicon-question-sign"></i>About</a></li>
+        <li><a href="notice"><i class="glyphicon glyphicon-book"></i>News</a></li>
+        <li><a href="video"><i class="glyphicon glyphicon-facetime-video"></i>Videos</a></li>
+        <li><a href="trainning"><i class="glyphicon glyphicon-tent"></i>Training</a></li>
+        <li><a href="index.ejs"><i class="glyphicon glyphicon-glass"></i>Go Live</a></li>
+        <li><a href="contact"><i class="glyphicon glyphicon-comment"></i>Contact/Feedback</a></li>
     </ul>
 
 </div>
@@ -45,22 +46,6 @@
 
     <%});%>
     </div>
-    <!--<p>Researchers from the George Institute for Global Health in Sydney found sending simple texts such as "Don't-->
-        <!--forget physical activity is good for you!" could motivate patients to improve their health.-->
-        <!--<br/>-->
-        <!--<br/>-->
-        <!--After receiving four texts a week for six months, patients significantly lowered their cholesterol, blood-->
-        <!--pressure and body mass index.-->
-        <!--<br/>-->
-        <!--<br/>-->
-
-        <!--Associate Professor Clara Chow from the institute said the approach had the potential to prevent second heart-->
-        <!--attacks and save thousands of lives.-->
-        <!--<br/>-->
-        <!--<br/>-->
-        <!--"Around 55,000 Australians go to hospital with a heart attack every year and around one third of those are-->
-        <!--repeat heart attacks," she said.-->
-    <!--</p>-->
 
 
 
