--- a/views/index.ejs
+++ b/views/index.ejs
@@ -31,52 +31,17 @@
         <li><a href="about"><i class="glyphicon glyphicon-question-sign"></i>About</a></li>
         <li><a href="notice"><i class="glyphicon glyphicon-book"></i>News</a></li>
         <li><a href="video"><i class="glyphicon glyphicon-facetime-video"></i>Videos</a></li>
-        <li><a href="trainning"><i class="glyphicon glyphicon-book"></i>Training</a></li>
+        <li><a href="trainning"><i class="glyphicon glyphicon-tent"></i>Training</a></li>
         <li><a href="index.ejs"><i class="glyphicon glyphicon-glass"></i>Go Live</a></li>
         <li><a href="contact"><i class="glyphicon glyphicon-comment"></i>Contact/Feedback</a></li>
     </ul>
 
 </div>
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
-
         <!-- Indicators -->
-
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
             <%- include partials/carosels %>
-            <!--<div class="item active">-->
-                <!--<img src="/images/1.jpg" alt="Qld Health">-->
-                <!--<div class="carousel-caption">-->
-                    <!--<h3>New Construction </h3>-->
-                    <!--<h4 id="featureLinks"><a href="http://www.google.com.au"> See More</a></h4>-->
-                <!--</div>-->
-            <!--</div>-->
-
-            <!--<div class="item">-->
-                <!--<img src="/images/2.jpg" alt="Chania">-->
-                <!--<div class="carousel-caption">-->
-                    <!--<h3>Welcome to Cairns </h3>-->
-                    <!--<h4 id="featureLinks"><a href="http://www.google.com.au"> See More</a></h4>-->
-                <!--</div>-->
-            <!--</div>-->
-
-            <!--<div class="item">-->
-                <!--<img src="/images/3.png" alt="Flower">-->
-                <!--<div class="carousel-caption">-->
-                    <!--<h3>General meeting </h3>-->
-                    <!--<h4 id="featureLinks"><a href="http://www.google.com.au"> See More</a></h4>-->
-                <!--</div>-->
-
-            <!--</div>-->
-
-            <!--<div class="item">-->
-                <!--<img src="/images/4.jpg" alt="Flower">-->
-                <!--<div class="carousel-caption">-->
-
-                    <!--<h3>Medication </h3>-->
-                    <!--<h4 id="featureLinks"><a href="http://www.google.com.au"> See More</a></h4>-->
-                <!--</div>-->
-            <!--</div>-->
         </div>
 
         <!-- Left and right controls -->
