--- a/views/notice.ejs
+++ b/views/notice.ejs
@@ -22,18 +22,16 @@
     <h1 id="title">News</h1>
 
 </div>
-
-
 <div id="mainMenu" class="hidden">
 
     <ul class="nav nav-stacked">
-        <li><a href="/">Home</a></li>
-        <li><a href="about">About</a></li>
-        <li><a href="notice">News</a></li>
-        <li><a href="video">Videos</a></li>
-        <li><a href="trainning">Training</a></li>
-        <li><a href="index.ejs">Go Live</a></li>
-        <li><a href="contact">Contact/Feedback</a></li>
+        <li><a href="/"><i class="glyphicon glyphicon-home"></i>Home</a></li>
+        <li><a href="about"><i class="glyphicon glyphicon-question-sign"></i>About</a></li>
+        <li><a href="notice"><i class="glyphicon glyphicon-book"></i>News</a></li>
+        <li><a href="video"><i class="glyphicon glyphicon-facetime-video"></i>Videos</a></li>
+        <li><a href="trainning"><i class="glyphicon glyphicon-tent"></i>Training</a></li>
+        <li><a href="index.ejs"><i class="glyphicon glyphicon-glass"></i>Go Live</a></li>
+        <li><a href="contact"><i class="glyphicon glyphicon-comment"></i>Contact/Feedback</a></li>
     </ul>
 
 </div>
@@ -56,6 +54,13 @@
             }, 1000);
         }
     });
+
+    $('.newsPanel').click(function(){
+        var url = window.location.href + "/" +$(this).children().first().text();
+        console.log("url"+ url);
+        window.location.href = url;
+    });
+
 
 </script>
 
