--- a/views/partials/post.ejs
+++ b/views/partials/post.ejs
@@ -1,10 +1,19 @@
 
 
 <% myNoticeArray.forEach(function(obj) { %>
-<div id="newsPanel">
-    <h3 id="newsTitle"><%= obj.noticeTitle %></h3>
-    <p id="newsContentPara"><%= obj.noticeContent %></p>
-    <p id="newsAuthor"><i>Written by - <%= obj.noticeAuthor %></i></p>
+<% console.log("ididiid" + obj._id) %>
+<div class="newsPanel">
+    <hidden class="hidden"><%= obj._id %></hidden>
+    <h3 class="newsTitle"><%= obj.noticeTitle %></h3>
+    <p class="newsContentPara"><%= obj.noticeContent.substring(0,300) %> ...</p>
+    <p class="newsAuthor"><i>Written by - <%= obj.noticeAuthor %></i></p>
 </div>
+<script>
+
+
+
+
+</script>
 <hr/>
 <% }); %>
+
