--- a/views/trainning.ejs
+++ b/views/trainning.ejs
@@ -40,7 +40,7 @@
 </div>
 
 <% Object.keys(data.pageContent).forEach(function(obj) { %>
-<p><%= data.pageContent[obj] %></p>
+<p><%- data.pageContent[obj] %></p>
 <%});%>
 
 <div id="homePageContainer">
