--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -161,6 +161,7 @@ a:visited{
   margin-top: 2%;
   position: relative;
   text-align: left;
+  color: black;
   background-color: rgb(203,223,237);
 
 }
