--- a/views/upload.ejs
+++ b/views/upload.ejs
@@ -43,6 +43,14 @@
     <button type="submit">Create</button>
 </fieldset>
 </form>
+
+    <form method="post" enctype="multipart/form-data" action="/fileupload">
+        <legend>Upload File</legend>
+        <fieldset>
+        <input type="file" name="file">
+        <input type="submit" value="Submit">
+        </fieldset>
+    </form>
 </div>
 <script>
     $('#cunter').click(function(){
